istio/03-reusable_virtual_service/proxy/with-serviceentry/mesh.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: example-vs
  namespace: proxy-system
spec:
  hosts:
    - example.proxy
  gateways:
    - mesh
  http:
    - match:
        - uri:
            prefix: "/api"
      delegate:
        name: echoserver-mesh-dvs
        namespace: istio-testing
